--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An airport management system with flight and booking management features.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
